--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="imageGallery"></div>
 
     <br>
-    <button id="loadMore" onclick="loadMore()">Load More ...</button>
+    <button id="loadMore" onclick="loadMore()">Load More</button>
     <script src="node.js" defer></script>
 </body>
 </html>
