--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <input type="text" id="query" placeholder="Search a Image">
         <button id="btn" onclick="run()">Search</button>
     </div>
+    <br><br><br>
+    <div id="orientation">
+        <div id="pt" class="orien"></div>
+        <div id="ls" class="orien"></div>
+        <div id="sq" class="orien"></div>
+    </div>
     <br>
     <div id="imageGallery"></div>
 
